--- a/index.html
+++ b/index.html
@@ -1,15 +1,12 @@
 ---
-title: The last sales CRM you'll ever need
-description: Track and optimize your sales team in real time
+title: Ordinary Solutions
+description: Developing your next idea into something extraordinary
 ---
 <section class="hero">
 	<div class="text-container">
-		<h1 class="editable">The last sales CRM <strong>you'll ever need</strong></h1>
-		<p class="subtext editable">Track and optimize your sales team in real time.</p>
+		<h1 class="editable">Developing your ideas into <strong>something extraordinary</strong></h1>
+		<p class="subtext editable">Development and support for your website and software needs</p>
 		<div class="cta button alt"><a href="{{ site.baseurl }}/contact/">Get Started Free</a></div>
-		<div>
-			<img src="{{ site.baseurl }}/images/dashboard.png" alt="Screenshot" class="screenshot editable" />
-		</div>
 	</div>
 </section>
 
@@ -50,20 +47,22 @@ description: Track and optimize your sales team in real time
 		</div>
 	</section>
 
+	<!--
 	<section class="testimonial">
 		<div class="container flex">
 			<div class="testimonial-block">
 				<div class="square-image"><img src="https://source.unsplash.com/6anudmpILw4/600x400" alt="Jim James" class="editable"></div>
 				<blockquote>
-					<p class="editable">Hydra has shaped the business we have today. We have a repeatable sales process and a strategy to scale our team. I recommend Hydra to any business looking to improve their sales.</p>
+					<p class="editable">Ken and his team have  has shaped the business we have today. We have a repeatable sales process and a strategy to scale our team. I recommend Hydra to any business looking to improve their sales.</p>
 					<p class="editable author">Jim James - CEO of Global Corp.</p>
 				</blockquote>
 			</div>
 		</div>
 	</section>
+	-->
 
 	<section class="bottom-cta">
-		<h2 class="editable"><strong>Improve</strong> your sales process today</h2>
+		<h2 class="editable">Bring your vision to <strong>life</strong> today</h2>
 		<div class="button alt"><a href="#">Get Started Free</a></div>
 	</section>
 </div>
