Homepage and styling updates

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@ description: Developing your next idea into something extraordinary
 	<section>
 		<div class="container flex">
 			<div class="text editable">
-				<h2>How can we <strong>double</strong> our sales revenue?</h2>
-				<p>Hydra learns your business. By analyzing your sales data, Hydra optimizes your sales process and show you where you should be spending your resources. </p>
+				<h2><strong>Application Development</strong></h2>
+				<p>We can develop applications specifically catered to your needs, providing a streamlined solution for you and your customers.</p>
 			</div>
 			<div class="image">
 				<img src="{{ site.baseurl }}/images/dashboard.png" alt="Screenshot" class="screenshot editable" />
@@ -26,8 +26,8 @@ description: Developing your next idea into something extraordinary
 	<section>
 		<div class="container flex">
 			<div class="text editable">
-				<h2>How can I <strong>keep track</strong> of my sales team?</h2>
-				<p>Hydra learns your business. By analyzing your sales data, Hydra optimizes your sales process and show you where you should be spending your resources.</p>
+				<h2><strong>Consulation</strong></h2>
+				<p>Not sure what you need, or how best to make it happen, or if you're on the right track? We're here to help and put our decades of experience to good use for you.</p>
 			</div>
 			<div class="image">
 				<img src="{{ site.baseurl }}/images/dashboard.png" alt="Screenshot" class="screenshot editable" />
@@ -38,8 +38,8 @@ description: Developing your next idea into something extraordinary
 	<section>
 		<div class="container flex">
 			<div class="text editable">
-				<h2>How can I <strong>forecast</strong> the next 90 days?</h2>
-				<p>Hydra learns your business. By analyzing your sales data, Hydra optimizes your sales process and show you where you should be spending your resources.</p>
+				<h2><strong>Support</strong></h2>
+				<p>Do you have a website or application and lack the resources to properly maintain it? Do you need an extra hand or some additional expertise? We're here to support you.</p>
 			</div>
 			<div class="image">
 				<img src="{{ site.baseurl }}/images/dashboard.png" alt="Screenshot" class="screenshot editable" />
