--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ description: Developing your next idea into something extraordinary
 ---
 <section class="hero">
 	<div class="text-container">
-		<h1 class="editable">Developing your ideas into <strong>something extraordinary</strong></h1>
+		<h1 class="editable">Developing your ideas into <strong style="color:#F5BB00;">something extraordinary</strong></h1>
 		<p class="subtext editable">Development and support for your website and software needs</p>
 		<div class="cta button alt"><a href="{{ site.baseurl }}/contact/">Get Started Free</a></div>
 	</div>
@@ -18,7 +18,7 @@ description: Developing your next idea into something extraordinary
 				<p>We can develop applications specifically catered to your needs, providing a streamlined solution for you and your customers.</p>
 			</div>
 			<div class="image">
-				<img src="{{ site.baseurl }}/images/dashboard.png" alt="Screenshot" class="screenshot editable" />
+				<img src="{{ site.baseurl }}/images/custom-development.jpg" class="screenshot editable" />
 			</div>
 		</div>
 	</section>
@@ -30,7 +30,7 @@ description: Developing your next idea into something extraordinary
 				<p>Not sure what you need, or how best to make it happen, or if you're on the right track? We're here to help and put our decades of experience to good use for you.</p>
 			</div>
 			<div class="image">
-				<img src="{{ site.baseurl }}/images/dashboard.png" alt="Screenshot" class="screenshot editable" />
+				<img src="{{ site.baseurl }}/images/consultation.jpg" class="screenshot editable" />
 			</div>
 		</div>
 	</section>
@@ -42,7 +42,7 @@ description: Developing your next idea into something extraordinary
 				<p>Do you have a website or application and lack the resources to properly maintain it? Do you need an extra hand or some additional expertise? We're here to support you.</p>
 			</div>
 			<div class="image">
-				<img src="{{ site.baseurl }}/images/dashboard.png" alt="Screenshot" class="screenshot editable" />
+				<img src="{{ site.baseurl }}/images/support.svg" class="screenshot editable" />
 			</div>
 		</div>
 	</section>
