--- a/pricing.html
+++ b/pricing.html
@@ -2,6 +2,7 @@
 title: Pricing
 heading: Find the perfect plan for your business
 description: All plans include our award winning sales optimization solution to track your sales in real time.
+sitemap: false
 pricing_table:
   - name: Basic
     color: "#8e8e8e"
